Simplify crud interface for API (GOLANG)
