# web_golang/docs/swagger.json
@@ -65,7 +65,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/question_models.CreateAnswer"
+                            "$ref": "#/definitions/question.CreateAnswer"
                         }
                     }
                 ],
@@ -73,7 +73,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/question_models.AnswerDB"
+                            "$ref": "#/definitions/question.AnswerDB"
                         }
                     }
                 }
@@ -101,7 +101,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/question_models.UpdateAnswer"
+                            "$ref": "#/definitions/question.UpdateAnswer"
                         }
                     }
                 ],
@@ -109,7 +109,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/question_models.QuestionDB"
+                            "$ref": "#/definitions/question.QuestionDB"
                         }
                     }
                 }
@@ -148,7 +148,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/question_models.QuestionDB"
+                                "$ref": "#/definitions/question.QuestionDB"
                             }
                         }
                     }
@@ -170,7 +170,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/question_models.CreateQuestion"
+                            "$ref": "#/definitions/question.CreateQuestion"
                         }
                     }
                 ],
@@ -178,7 +178,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/question_models.QuestionDB"
+                            "$ref": "#/definitions/question.QuestionDB"
                         }
                     }
                 }
@@ -210,7 +210,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/question_models.QuestionDB"
+                            "$ref": "#/definitions/question.QuestionDB"
                         }
                     }
                 }
@@ -259,7 +259,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/question_models.UpdateQuestion"
+                            "$ref": "#/definitions/question.UpdateQuestion"
                         }
                     }
                 ],
@@ -267,7 +267,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/question_models.QuestionDB"
+                            "$ref": "#/definitions/question.QuestionDB"
                         }
                     }
                 }
@@ -468,10 +468,168 @@
                     }
                 }
             }
+        },
+        "/tests": {
+            "get": {
+                "description": "Get all available tests",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "test"
+                ],
+                "summary": "get tests",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "write page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "write limit number",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/test.TestDB"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a new test",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "test"
+                ],
+                "summary": "create a new test",
+                "parameters": [
+                    {
+                        "description": "Task JSON",
+                        "name": "test",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/test.CreateTest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/test.TestDB"
+                        }
+                    }
+                }
+            }
+        },
+        "/tests/{testId}": {
+            "get": {
+                "description": "Get test by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "test"
+                ],
+                "summary": "get test by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Write test id",
+                        "name": "testId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/test.TestDB"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a test by id",
+                "tags": [
+                    "test"
+                ],
+                "summary": "delete a test",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Write test id",
+                        "name": "testId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            },
+            "patch": {
+                "description": "Edit a test by id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "test"
+                ],
+                "summary": "Edit a test",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Write test id",
+                        "name": "testId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Test JSON",
+                        "name": "test",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/test.UpdateTest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/test.TestDB"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "question_models.AnswerDB": {
+        "question.AnswerDB": {
             "type": "object",
             "properties": {
                 "content": {
@@ -485,7 +643,7 @@
                 }
             }
         },
-        "question_models.CreateAnswer": {
+        "question.CreateAnswer": {
             "type": "object",
             "required": [
                 "content"
@@ -499,7 +657,7 @@
                 }
             }
         },
-        "question_models.CreateQuestion": {
+        "question.CreateQuestion": {
             "type": "object",
             "required": [
                 "materi",
@@ -514,13 +672,13 @@
                 }
             }
         },
-        "question_models.QuestionDB": {
+        "question.QuestionDB": {
             "type": "object",
             "properties": {
                 "answers": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/question_models.AnswerDB"
+                        "$ref": "#/definitions/question.AnswerDB"
                     }
                 },
                 "id": {
@@ -534,7 +692,7 @@
                 }
             }
         },
-        "question_models.UpdateAnswer": {
+        "question.UpdateAnswer": {
             "type": "object",
             "properties": {
                 "content": {
@@ -548,13 +706,83 @@
                 }
             }
         },
-        "question_models.UpdateQuestion": {
+        "question.UpdateQuestion": {
             "type": "object",
             "properties": {
                 "materi": {
                     "type": "integer"
                 },
                 "question": {
+                    "type": "string"
+                }
+            }
+        },
+        "task.CreateTask": {
+            "type": "object",
+            "required": [
+                "end_date",
+                "name",
+                "start_date"
+            ],
+            "properties": {
+                "end_date": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "start_date": {
+                    "type": "string"
+                }
+            }
+        },
+        "task.SetQuestion": {
+            "type": "object",
+            "required": [
+                "questions"
+            ],
+            "properties": {
+                "questions": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "task.TaskDB": {
+            "type": "object",
+            "properties": {
+                "end_date": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "questions": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "start_date": {
+                    "type": "string"
+                }
+            }
+        },
+        "task.UpdateTask": {
+            "type": "object",
+            "properties": {
+                "end_date": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "start_date": {
                     "type": "string"
                 }
             }
@@ -625,6 +853,56 @@
                     "type": "string"
                 },
                 "start_date": {
+                    "type": "string"
+                }
+            }
+        },
+        "test.CreateTest": {
+            "type": "object",
+            "required": [
+                "email",
+                "name",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "test.TestDB": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "test.UpdateTest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
